fix "self-proxy" not mocked correctly.